#1 Build Signin and Signup page

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "product-manager",
+    "name": "Product Manager",
     "slug": "product-manager",
     "version": "1.0.0",
     "orientation": "portrait",
